kubernetes/algod-relay/aramid-relay/de-4-aramid-relay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      proxy_set_header X-Algo-API-Token aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;
  name: aramidmain-algod-3-biatec-ingress
  namespace: aramid
spec:
  rules:
    - host: aramidmain-algod-public.de.nodes.biatec.io
      http:
        paths:
          - backend:
              service:
                name: r-1-aramid-algod-protocol-service
                port:
                  number: 18080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - aramidmain-algod-public.de.nodes.biatec.io
      secretName: tls-aramidmain-algod-public.de.nodes.biatec.io
